# annotator

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  SKILL.md  marketplace.json  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
annotator/: __init__.py  analyzer.py  cli.py  client.py  git.py
annotator/.claude-plugin/: plugin.json
annotator/api_docs/: __init__.py  openapi.py  postman.py
annotator/languages/: __init__.py  base.py  python_analyzer.py  typescript_analyzer.py
annotator/skills/annotator/: SKILL.md
annotator/ui/: __init__.py  diff_viewer.py
tests/: test_openapi.py  test_postman.py  test_python_analyzer.py  test_typescript_analyzer.py
tests/fixtures/python/: sample_fastapi.py
tests/fixtures/typescript/: sample_express.ts
